2004-12-29  Balazs Scheidler <bazsi@balabit.hu>

	* src/afprog.c (afprogram_dd_init): call setsid before launching child,
	(afprogram_dd_deinit): deinit & unref self->writer here instead of
	in afprogram_dd_free,
	
	* src/center.c (log_center_queue): do not supply self as user_data pointer to 
	the ack_block callback as that would require adding a reference to self

	* src/dgroup.c (log_dest_group_queue): do not supply self as user_data pointer to 
	the ack_block callback as that would require adding a reference to self
	
	* src/logreader.c: instead of using self->window_size use self->options->window_size
	so that the window is shared between all LogReaders using the same
	options,
	(log_reader_handle_line): add reference to self before supplying it as an argument to 
 	the ack_block callback function,
	(log_reader_msg_ack): unref the supplied logreader argument

2004-12-27  Balazs Scheidler <bazsi@balabit.hu>

	* src/afsocket.c (afsocket_sd_deinit): break circular reference
	between self->reader and self,
	(afsocket_sd_notify): do not destroy/unref sender in NC_CLOSE, as
	afsocket_sd_close_connection already does that,
	(afsocket_sd_init, afsocket_sd_deinit): removed static,
	(afsocket_sd_free_instance): renamed from afsocket_sd_free, removed
	static, created a new afsocket_sd_free function at the same time
	which is set as the free_fn of AFSocketSourceDriver

	* src/afunix.c: implemented user/group/perm settings

	* src/cfg-grammar.y: added support for log-prefix

	* src/cfg.c: changed default timestamp format to BSD for compatibility

	* src/filter.c: fixed AND and OR operator evaluation, the operands
	were not correctly saved at initialization time, thus NULL was
	referenced at evaluation time

	* src/logreader.c: added log_prefix support for all log readers

	* src/logwriter.c: use log_msg_drop instead of a simple log_msg_unref

	* src/main.c: fixed SIGCHLD handling, loop while waitpid returns > 0,
	added tzset() call
