@@ -37,58 +37,59 @@
 #define M_FACILITY 1
 #define M_LEVEL    2
 #define M_TAG      3
+#define M_PRI      4
 
-#define M_DATE     4
-#define M_FULLDATE 5
-#define M_ISODATE  6
-#define M_YEAR     7
-#define M_MONTH    8 
-#define M_DAY      9
-#define M_HOUR     10
-#define M_MIN      11
-#define M_SEC      12
-#define M_WEEKDAY  13
-#define M_TZOFFSET 14
-#define M_TZ       15
-#define M_UNIXTIME 16
+#define M_DATE     10
+#define M_FULLDATE 11
+#define M_ISODATE  12
+#define M_YEAR     13
+#define M_MONTH    14
+#define M_DAY      15
+#define M_HOUR     16
+#define M_MIN      17
+#define M_SEC      18
+#define M_WEEKDAY  19
+#define M_TZOFFSET 20
+#define M_TZ       21
+#define M_UNIXTIME 22
 
-#define M_DATE_RECVD     17
-#define M_FULLDATE_RECVD 18
-#define M_ISODATE_RECVD  19
-#define M_YEAR_RECVD     20
-#define M_MONTH_RECVD    21
-#define M_DAY_RECVD      22
-#define M_HOUR_RECVD     23
-#define M_MIN_RECVD      24
-#define M_SEC_RECVD      25
-#define M_WEEKDAY_RECVD  26
-#define M_TZOFFSET_RECVD 27
-#define M_TZ_RECVD       28
-#define M_UNIXTIME_RECVD 29
+#define M_DATE_RECVD     30
+#define M_FULLDATE_RECVD 31
+#define M_ISODATE_RECVD  32
+#define M_YEAR_RECVD     33
+#define M_MONTH_RECVD    34
+#define M_DAY_RECVD      35
+#define M_HOUR_RECVD     36
+#define M_MIN_RECVD      37
+#define M_SEC_RECVD      38
+#define M_WEEKDAY_RECVD  39
+#define M_TZOFFSET_RECVD 40
+#define M_TZ_RECVD       41
+#define M_UNIXTIME_RECVD 42
 
-#define M_DATE_STAMP     30
-#define M_FULLDATE_STAMP 31
-#define M_ISODATE_STAMP  32
-#define M_YEAR_STAMP     33
-#define M_MONTH_STAMP    34
-#define M_DAY_STAMP      35
-#define M_HOUR_STAMP     36
-#define M_MIN_STAMP      37
-#define M_SEC_STAMP      38
-#define M_WEEKDAY_STAMP  39
-#define M_TZOFFSET_STAMP 40
-#define M_TZ_STAMP       41
-#define M_UNIXTIME_STAMP 42
+#define M_DATE_STAMP     50
+#define M_FULLDATE_STAMP 51
+#define M_ISODATE_STAMP  52
+#define M_YEAR_STAMP     53
+#define M_MONTH_STAMP    54
+#define M_DAY_STAMP      55
+#define M_HOUR_STAMP     56
+#define M_MIN_STAMP      57
+#define M_SEC_STAMP      58
+#define M_WEEKDAY_STAMP  59
+#define M_TZOFFSET_STAMP 60
+#define M_TZ_STAMP       61
+#define M_UNIXTIME_STAMP 62
 
-#define M_FULLHOST       43
-#define M_HOST           44
-#define M_FULLHOST_FROM  45
-#define M_HOST_FROM      46
-#define M_PROGRAM        47
+#define M_FULLHOST       70
+#define M_HOST           71
+#define M_FULLHOST_FROM  72
+#define M_HOST_FROM      73
+#define M_PROGRAM        74
 
-#define M_MESSAGE        48
-
-#define M_SOURCE_IP      49
+#define M_MESSAGE        75
+#define M_MSGONLY	 76
+#define M_SOURCE_IP      77
 
 #define M_MATCH_REF_OFS 256
 
