@@ -11,7 +11,7 @@ options
   ts_format("iso");
 };
 
-template t_sample { template("$HOUR abcdef\n"); };
+template t_sample { template("$HOUR abcdef ${MSG}\n"); };
 
 source s_local { tcp(port(2000)); unix-stream("log"); internal(); };
 
